tests/machine/x/ocaml/group_by.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/group_by.ml", line 33, characters 72-73:
33 |     __res0 := [("city",Obj.repr (g.key));("count",Obj.repr (List.length g));("avg_age",Obj.repr ((List.fold_left (+) 0 (let __res1 = ref [] in
                                                                             ^
Error: This expression has type ('a, 'b) group
       but an expression was expected of type 'c list


Context (around line 33):
  31 |   List.iter (fun (gKey,gItems) ->
  32 |     let g = { key = gKey; items = List.rev gItems } in
  33 |     __res0 := [("city",Obj.repr (g.key));("count",Obj.repr (List.length g));("avg_age",Obj.repr ((List.fold_left (+) 0 (let __res1 = ref [] in
  34 |   List.iter (fun p ->
  35 |       __res1 := p.age :: !__res1;
